fix overflow in Modal for interfaces lists

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -33,3 +33,7 @@ body {
   background: #757575;
   border-radius: 8px;
 }
+
+.mantine-Modal-content {
+  overflow-y: visible;
+}
